--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,10 @@
 # Maven package Java project Web App to Linux on Azure
+- task: Docker@2
+  inputs:
+    containerRegistry: 'docker-hub-conn'
+    repository: 'srinivasvista\01-hello-world-rest'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
 # Build your Java project and deploy it to Azure as a Linux web app
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
