--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,6 +13,12 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
+- task: Docker@2
+  inputs:
+    containerRegistry: 'docker-hub-conn'
+    repository: 'srinivasvista/test3'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
